[package]
name = "storm-db"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bloomfilter = "3.0.1"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
moka = { version = "0.12.10", features = ["future"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
    "run-cargo-check",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
